--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
       "import": "./build/release.js",
       "types": "./build/release.d.ts"
     }
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hypercubed/as-mpz.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Hypercubed/as-mpz/issues"
+  },
+  "homepage": "https://github.com/Hypercubed/as-mpz#readme"
 }
