--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypercubed/as-mpz",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "AssemblyScript package for math with arbitrarily large integers",
   "ascMain": "assembly/mp.ts",
   "types": "assembly/mp.ts",
@@ -8,6 +8,7 @@
   "main": "build/release.ts",
   "files": [
     "assembly",
+    "index.ts",
     "README.md",
     "package.json",
     "tsconfig.json",
