--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@hypercubed/as-mpz",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "AssemblyScript package for math with arbitrarily large integers",
-  "ascMain": "assembly/mp.ts",
-  "types": "assembly/mp.ts",
-  "source": "assembly/mp.ts",
-  "main": "build/release.ts",
+  "ascMain": "assembly/index.ts",
+  "types": "assembly/index.ts",
+  "source": "assembly/main.ts",
+  "main": "build/release.js",
+  "module": "assembly/index.ts",
   "files": [
     "assembly",
+    "build",
     "index.ts",
     "README.md",
     "package.json",
@@ -20,8 +22,8 @@
     "pretap": "npm run asbuild:debug",
     "prettier": "prettier . --check",
     "tap": "tap --node-arg=\"--no-warnings\" --allow-empty-coverage --disable-coverage run ./tests/*.js",
-    "asbuild:debug": "asc assembly/index.ts --target debug",
-    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild:debug": "asc assembly/main.ts --target debug",
+    "asbuild:release": "asc assembly/main.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "bench": "astral",
     "fix": "prettier . --write"
