--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "as-bigint": "^0.5.3",
     "assemblyscript": "^0.27.22",
     "assemblyscript-prettier": "^3.0.1",
+    "fast-check": "^3.15.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "tap": "^18.6.1"
