--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@as-pect/cli": "^8.1.0",
     "@as-tral/cli": "^3.0.2",
+    "@assemblyscript/wasi-shim": "^0.1.0",
     "as-bigint": "^0.5.3",
     "assemblyscript": "^0.27.22",
     "assemblyscript-prettier": "^3.0.1",
