--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
   "plugins": ["assemblyscript-prettier"],
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "none",
+  "arrowParens": "avoid"
 }
