--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "asp": "asp",
     "pretap": "npm run asbuild:debug",
     "prettier": "prettier . --check",
-    "tap": "tap --node-arg=\"--no-warnings\" --allow-empty-coverage --disable-coverage run ./tests/bits.spec.js",
+    "tap": "tap --node-arg=\"--no-warnings\" --allow-empty-coverage --disable-coverage run ./tests/*.spec.js",
     "asbuild:debug": "asc assembly/main.ts --target debug",
     "asbuild:release": "asc assembly/main.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "bench": "astral --uncheckedBehavior always --noAssert",
-    "fix": "prettier . --write"
+    "fix": "prettier . --write",
+    "docs": "node ./scripts/generate-docs.cjs"
   },
   "author": "J. Harshbarger",
   "license": "MIT",
@@ -39,6 +40,7 @@
     "assemblyscript-prettier": "^3.0.1",
     "fast-check": "^3.15.0",
     "npm-run-all": "^4.1.5",
+    "parse-comments": "^0.4.3",
     "prettier": "^3.1.1",
     "tap": "^18.6.1"
   },
